# hr_final

./: Procfile  README.md  pyproject.toml  render.yaml  requirements.txt  runtime.txt
call-main/: .gitignore  Procfile  README.md  call_client.py  manage.py  render.yaml  requirements.txt  runtime.txt
call-main/call/: models.py  urls.py  views.py
call-main/call/management/commands/: fetch_twilio_transcripts.py
call-main/call/migrations/: 0001_initial.py  0002_callresponse.py  0003_callresponse_recording_duration_and_more.py  0004_alter_callresponse_options_and_more.py
call-main/call/templates/: dashboard.html
call-main/call/templates/call/: dashboard.html  test_config.html  view_response.html
call-main/hr_team/: asgi.py  settings.py  urls.py  wsgi.py
call-main/templates/: base.html  dashboard.html  index.html
